<resources>
    <string name=".">.</string>
    <string name="app_name">GymApp - TFG</string>
    <string name="action_settings">Settings</string>
    <string name="noInternet">No Internet Connection</string>
    <string name="tryAgain">Try Again</string>
    <string name="NotInternet">No internet connection. Please, check your connectivity.</string>
    <string name="login">Login</string>
    <string name="register">New to the application? Sign up here</string>
    <string name="loginErr">Email and/or password do not match. Check both</string>
    <string name="allFieldsRequired">All filds are requiered</string>
    <string name="registrationOK">Registered Successfully</string>
    <string name="errorRegistration">This email is already registered</string>
    <string name="invalidEmail">Wrong email</string>
    <string name="mailClient">Mail del cliente</string>
    <string name="addClient">Add customer</string>
    <string name="namelabel">"Name: "</string>
    <string name="surnamelabel">"Surname: "</string>
    <string name="maillabel">"Mail: "</string>
    <string name="peslabel">"Weight: "</string>
    <string name="alcadalabel">"Height: "</string>
    <string name="userNoExist">The mail entered does not exist</string>
    <string name="entrenadorlabel">"Trainer:  "</string>
    <string name="customerMail">"Customer's mail"</string>
    <string name="descripciolabel">"Description: "</string>
    <string name="titollabel">"Title: "</string>
    <string name="duedatelabel">"Due Date: "</string>
    <string name="addTask">Add Task</string>
    <string name="toolbarTitle">"Toolbar Title"</string>
    <string name="EntrenadorDashboard">"Trainer Dashboard"</string>
    <string name="clientView">"Client View"</string>
    <string name="SuperAdminDashboard">"Administrator Dashboard"</string>
    <string name="addEntrenador">Add Entrenador</string>
    <string name="message_hint">Say anything</string>
    <string name="send">Send</string>
    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
    <string name="write_message">Write a mesaje...</string>
    <string name="deleteTask">Delete Task</string>
    <string name="save">Save</string>
    <string name="Edit">Edit</string>
    <string name="editTask">Edit Task</string>
    <string name="editPerfilClient">Edit Profile</string>
    <string name="heightlabel">"Height: "</string>
    <string name="weightlabel">"Weight: "</string>
    <string name="objectiulabel">"Goals: "</string>
    <string name="especialitatslabel">Specialties: "</string>
    <string name="editPerfilEntrenador">Edit Profile</string>
    <string name="gallery">Galery</string>
    <string name="addProfileImage">Add profile photo</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="RegisterNewAccount">Register New Account</string>
    <string name="AlreadyRegistred">Already has account! Login here</string>
    <string name="addedSuccessfully">Client added successfully</string>
    <string name="haveTrainer">The selected client has already a coach</string>
    <string name="taskAdded">Task added successfully</string>
    <string name="chat">CHAT</string>
    <string name="accessingClients">Accessing the list of clients</string>
    <string name="accessingTrainers">Accessing the list of trainers</string>
    <string name="loading">Loading...</string>
    <string name="noTrainer">Do not have a coach assigned</string>
    <string name="accessingTasks">Accessing the list of tasks</string>
    <string name="confirmation">Confirmation</string>
    <string name="areYouSure">Are you sure you want to delete this coach?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="nameandSurenameRequired">Name and Surname are requiered</string>
    <string name="titleandDescriptionRequired">Title and description are requiered</string>
    <string name="areYouSureDeleteTask">Are you sure you want to delete this task?</string>
    <string name="areYouSureDeleteClient">Are you sure you want to delete this client?</string>
    <string name="noCoach">No coach assigned</string>
    <string name="notAssigned">Not assigned</string>
    <string name="taskCompleted">TASK COMPLETED</string>
    <string name="markCompleted">Mark as completed</string>
    <string name="alreadyCompleted">The task is already complete</string>
    <string name="editComment">"- Edit comment"</string>
    <string name="completed">Completed</string>
    <string name="notDone">Not done</string>
    <string name="pending">Pending</string>
    <string name="cantEdit">"You can't edit a completed task"</string>
    <string name="commentlabel">Comment:</string>
    <string name="addComment">"+ Add comment"</string>


</resources>