<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    tools:context=".controller.Login">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background">

        <!-- Login Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true">
            <!--  Email Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="@string/email"/>
            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dip"
                android:textColor="#ffff"
                android:singleLine="true"/>
            <!--  Password Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="@string/password"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:textColor="#ffff"
                android:password="true"/>
            <!-- Login button -->
            <Button android:id="@+id/btnLogin"
                android:background="#FFFF00"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/login"
                android:layout_gravity="center_horizontal" />
            <!-- Link to Registration Screen -->

        </LinearLayout>

        <TextView android:id="@+id/link_to_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:paddingBottom="30dp"
            android:gravity="center"
            android:textSize="20dip"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</RelativeLayout>