<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background">

        <!-- Registration Form -->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:id="@+id/linearLayout2"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true">

            <!-- Name Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="Name"/>
            <EditText android:id="@+id/reg_name"
                android:inputType="textCapWords"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:layout_marginBottom="20dip"/>

            <!-- Surname Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="Surame"/>
            <EditText android:id="@+id/reg_surname"
                android:inputType="textCapWords"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:layout_marginBottom="20dip"/>

            <!--  Email Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="@string/maillabel"/>
            <EditText android:id="@+id/reg_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:layout_marginBottom="20dip"/>

            <!-- Password Label -->
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:text="@string/password"/>
            <EditText android:id="@+id/reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:singleLine="true"
                android:textColor="#ffffff"
                android:layout_marginTop="5dip"/>

            <!-- Register Button -->
            <Button android:id="@+id/btnRegister"
                android:background="#FFFF00"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_width="263dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_gravity="center_horizontal"
                android:text="@string/RegisterNewAccount"/>

            <!-- Link to Login Screen -->

        </LinearLayout>

        <TextView android:id="@+id/link_to_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/AlreadyRegistred"
            android:paddingBottom="30dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20dip"
            android:textColor="#ffff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />
        <!-- Registration Form Ends -->
    </RelativeLayout>
</RelativeLayout>