<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="#ffffff">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_add_task"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:titleTextColor="#ffffff">
    </android.support.v7.widget.Toolbar>

<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/toolbar_add_task"
    android:layout_alignParentEnd="true"
    android:layout_alignParentStart="true">

    <RelativeLayout
        android:id="@+id/linearLayoutNewTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:weightSum="1"
        android:layout_below="@+id/toolbar_add_task"
        android:layout_centerHorizontal="true">

        <!--DECRIPCIO TASK LABEL-->
        <EditText
            android:id="@+id/descripcio_task"
            android:hint="@string/descripciolabel"
            android:inputType="textCapWords|textMultiLine"
            android:maxLength="250"
            android:layout_below="@+id/titol_task"
            android:textColorHint="#bbbbbb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:textColor="#708090"
            android:singleLine="false" />

    <RelativeLayout
        android:id="@+id/layoutDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descripcio_task"
        android:weightSum="1">
        <!--DUE DATE TASK LABEL-->
        <EditText
            android:id="@+id/duedate_task"
            android:hint="@string/duedatelabel"
            android:textColorHint="#bbbbbb"
            android:layout_width="wrap_content"
            android:gravity="left"
            android:layout_height="wrap_content"
            android:textColor="#708090"
            android:singleLine="true"
            android:layout_alignParentBottom="false"
            android:layout_alignParentStart="false" />

        <ImageButton
            android:id="@+id/btnChangeDate"
            android:src="@drawable/ic_calendar"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/duedate_task"
            android:layout_toEndOf="@+id/duedate_task" />
    </RelativeLayout>

        <Button
            android:id="@+id/AddNewTask"
            android:layout_below="@+id/layoutDate"
            android:gravity="center|center_vertical"
            android:background="#FF4081"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:text="@string/addTask"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100px" />
    </RelativeLayout>
</ScrollView>

</RelativeLayout>